--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ dependencies = [
     "librosa",
     "pandas",
     "soundfile",
+    "matplotlib",
+    "seaborn",
+    "ipywidgets",
 ]
 
 [tool.ruff]
